Refactor DataLoader to accept file path parameter